Pending changes: Fix buggy display of changes info
The display of pending changes information was broken in some discovery
page cases. The JS update of this information is fixed.
(CMK-10243)

--- a/web/htdocs/themes/facelift/scss/_page_menu.scss
+++ b/web/htdocs/themes/facelift/scss/_page_menu.scss
@@ -67,11 +67,17 @@ div#top_heading {
       }
     }
 
-    &.no_changes div.text_container span.changes_str {
-      color: $font-color-dimmed;
+    &.no_changes div.text_container {
+      span.changes_number {
+        display: none;
+      }
 
-      &:hover {
-        color: $font-color;
+      span.changes_str {
+        color: $font-color-dimmed;
+
+        &:hover {
+          color: $font-color;
+        }
       }
     }
 
